deployments/traefik-test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-test
  annotations:
    elifesciences.org/default-project: ${cluster_name}
