deployments/traefik-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-test
spec:
  type: ClusterIP
  ports:
  - port: 5678
